<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.nangshwekyi.cp3406assignment2app1.QuizzActivity">

    <ImageView
        android:id="@+id/image_goback"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:onClick="buttonGoBack"
        android:src="@drawable/backbutton"
        tools:ignore="ContentDescription,onClick" />

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:padding="4dp"
        android:layout_marginTop="17.33dp"
        android:text="@string/question_to_answer"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@android:style/TextAppearance.Holo.Large"
        android:textStyle="normal|bold" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/chlorine"
        android:background="@color/DarkGreenBlue"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:onClick="onClick"
        android:layout_marginTop="30.33dp"
        android:textSize="23sp"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice1"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/flase"
        android:background="@color/DarkGreenBlue"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"
        android:onClick="onClick"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="23sp"
        android:layout_marginBottom="24dp"
        android:id="@+id/choice2"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/helium"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/DarkGreenBlue"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"
        android:onClick="onClick"
        android:textSize="23sp"
        android:layout_marginBottom="23dp"
        android:id="@+id/choice3"
        android:textAllCaps="false"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_current"
            android:id="@+id/score_text"
            android:gravity="right"
            android:textSize="25sp"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textColor="@color/colorPrimaryDark"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:gravity="right"
            android:textSize="25sp"
            android:text="@string/_0_0"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>
</LinearLayout>
