<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nangshwekyi.cp3406assignment2app1.TwitterActivity">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_instructions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btn_login"
            android:text="@string/authorize"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="19.30dp"
            android:background="@color/DarkGreenBlue"
            android:layout_centerInParent="true"
            android:textSize="23sp"
            android:textColor="@color/colorPrimaryDark"
            />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/hello"
            android:layout_marginTop="19.30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_marginTop="19.30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/first_image"
            android:contentDescription="" />

        <EditText
            android:id="@+id/share_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#cceaf3"
            android:hint="@string/share_instructions"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="19.30dp"
            android:background="@color/DarkGreenBlue"
            android:text="@string/share"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="19.30dp"
            android:background="@color/DarkGreenBlue"
            android:onClick="buttonHand"
            android:text="@string/home3"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="italic"
            tools:ignore="OnClick" />


    </LinearLayout>


</LinearLayout>
