<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.nangshwekyi.cp3406assignment2app1.ResultActivity">

    <ImageView
        android:id="@+id/image_score"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/score" />


    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150.90dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/textScore"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Current Score"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="27sp" />

        <TextView
            android:text="Your High Score:"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/textHighScore"
            android:textSize="27sp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <Button
            android:id="@+id/buttonTwitter"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/DarkGreenBlue"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/share_twitter"
            android:textSize="25sp"
            android:layout_marginTop="19.30dp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:onClick="buttonTwitter"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/buttonPlay"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/DarkGreenBlue"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/goback"
            android:textSize="25sp"
            android:layout_marginTop="19.30dp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:onClick="buttonContinue"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/DarkGreenBlue"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/home2"
            android:textSize="25sp"
            android:layout_marginTop="19.30dp"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:onClick="buttonHome"
            tools:ignore="OnClick" />


    </LinearLayout>

</RelativeLayout>
